# tcr-kata

./: .gitignore  CLAUDE.md  README.md  distractions.md  learnings.md  package-lock.json  package.json  pyproject.toml  session-notes.md  todos.json
docs/: presentation-outline.md
docs/references/: tcr-overview.md
presentations/: presentation.md
scripts/: tcr.py
src/tcr_todo/: __init__.py  cli.py  models.py  repo.py
src/tcr_todo/core/: __init__.py
src/tcr_todo/repo/: __init__.py  file.py  memory.py  sqlite.py
tests/: __init__.py  test_cli.py  test_dummy.py  test_file_repo.py  test_protocol_compliance.py  test_sqlite_repo.py  test_todo.py
