[project]
name = "tcr-todo"
version = "0.1.0"
description = "A TCR kata building a command line TODO list"
authors = [
    {name = "Christopher Jewell"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.2"
mypy = "^1.16.1"

